# shepherd-webapi

./: .ansible-lint  .bumpversion.cfg  .codespellrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  Pipfile  README.md  Readme_server.md  TODO.md  TODO_django.md  flocklab_template.xml  hdf_to_influxdb.py  hdf_to_timescaledb.py  influx_db_tests.py  pyproject.toml  readme_RPC_portmapper_service.md  readme_sshd.md  setup.cfg
.github/: zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish_client.yaml  py_tests.yaml  qa_tests.yml  qc_tests.yml  quality_assurance.yaml  release.yaml  repo-tests.yml  static_analysis.yaml  test_py_client.yaml  test_py_server.yaml
client/: pyproject.toml
client/examples/: access_registration.py  access_user.py  e1_account_creation.py  e2_account_info.py  e2_user_info.py  e4_experiment_info.py
client/examples_admin/: approve_account.py  deactivate_account.py  get_commands_and_restrictions.py
client/shepherd_client/: __init__.py  client_admin.py  client_user.py  config.py  version.py
db_benchmarks/: hdf_to_influxdb.py  hdf_to_timescaledb.py  influx_db_tests.py  installation.rst  pedantic_test.py
deploy/: bootstrap.yml  datastorage_install.yml  deploy.yml  setup_zih_datastorage.yml
doc/: TODO.md  TODO_django.md  installation.rst  server_config_icmp.md  server_config_rpc_portmapper.md  server_config_ssl_certificates.md  tech_stack.md  testbed_constraints.md  topic_links.rst
examples/: testing.py
inventory/: servers.yml
playground/: README.md
scratch_fastapi/: prototype_client.py  prototype_redirect.py  prototype_server.py  readme.md  shepherd-redirect.service  shepherd-web.service
scratch_models/: example_config_emulator.yml  example_config_emulator_out.yml  example_config_testbed.yml  example_config_virtsource.yml  model_param.py  model_pydantic.py  prototype_client.py  prototype_generate_json_schema.py  prototype_server.py  readme.md  test.py  test_emulator.py  test_fastapi.py  test_model_param.py  test_script.py  test_testbed.py  test_vsource.py  virtual_source_defs.yml
scripts/: key_generator.py  salt_generator.py
server/: README.md  WebExperiment.yaml  build_server.sh  pyproject.toml  shepherd-api.service  shepherd-redirect.service  shepherd-scheduler.service
server/examples/: repair_database.py
server/shepherd_server/: __init__.py  async_wrapper.py  cli.py  config.py  database_prune.py  instance_api.py  instance_db.py  instance_redirect.py  instance_scheduler.py  logger.py  version.py
server/shepherd_server/api_auth/: models.py  router.py
server/shepherd_server/api_experiment/: models.py  router.py
server/shepherd_server/api_testbed/: db_client.py  db_fixtures.py  model_scheduler.py  models_status.py  router.py
server/shepherd_server/api_user/: models.py  router.py  utils_mail.py  utils_misc.py
server/tests/: conftest.py  test_api_experiment.py  test_api_user.py  test_api_user_admin.py  test_api_user_registration.py  test_authorization.py  test_experiment_models.py
shepherd_client/: LICENSE  README.md  client_admin.py  client_user.py  config.py  pyproject.toml  reqs
shepherd_client/examples/: e1_account_creation.py  e2_account_info.py  e3_experiment_create_and_schedule.py  e4_experiment_info.py  e5_experiment_download_and_delete.py
shepherd_client/examples_admin/: approve_account.py  experiment_statistics.py  get_commands_and_restrictions.py  stresstest.py
shepherd_client/shepherd_client/: __init__.py  cli.py  client_admin.py  client_testbed.py  client_user.py  client_web.py  config.py  version.py
shepherd_client/tests/: conftest.py  test_api_account.py  test_api_admin.py  test_api_experiment.py  test_api_resources.py  test_api_testbed.py
shepherd_server/: README.md  backup_db.py  build_server.sh  cli.py  config.py  database_prune.py  instance_api.py  instance_db.py  instance_redirect.py  instance_scheduler.py  logger.py  performance.md  pyproject.toml  shepherd-api.service  shepherd-redirect.service  shepherd-scheduler.service  version.py
shepherd_server/api_auth/: models.py  router.py  utils.py
shepherd_server/api_experiment/: models.py  router.py
shepherd_server/api_testbed/: db_fixtures.py
shepherd_server/api_user/: models.py  router.py  utils_mail.py  utils_misc.py
shepherd_server/examples/: repair_database.py
shepherd_server/migrations/: 2026-04-28_statistics_bug.py
shepherd_server/routes/: testbed.py
shepherd_server/scripts/: key_generator.py  salt_generator.py
shepherd_server/shepherd_server/: __init__.py  async_wrapper.py  cli.py  config.py  database_backup.py  database_prune.py  instance_api.py  instance_db.py  instance_fixtures.py  instance_frontend.py  instance_redirect.py  instance_scheduler.py  logger.py
shepherd_server/shepherd_server/api_accounts/: models.py  router.py  utils_mail.py  utils_misc.py
shepherd_server/shepherd_server/api_auth/: router.py  utils.py
shepherd_server/shepherd_server/api_content/: router.py
shepherd_server/shepherd_server/api_experiment/: models.py  router.py
shepherd_server/shepherd_server/api_experiments/: models.py  router.py
shepherd_server/shepherd_server/api_resources/: router.py
shepherd_server/shepherd_server/api_testbed/: db_client.py  db_fixtures.py  models_status.py  router.py
shepherd_server/shepherd_server/api_user/: models.py  router.py  utils_mail.py
shepherd_server/shepherd_server/routes/: testbed.py
shepherd_server/tests/: conftest.py  test_api_experiment.py  test_api_user.py  test_api_user_admin.py  test_api_user_registration.py  test_authorization.py  test_cli.py  test_experiment_models.py  test_python.py
shepherd_wsrv/: __init__.py  api_instance.py  cli.py  config.py  database_cli.py  database_instance.py  database_models.py  db_instance.py  logger.py  redirect_instance.py  task_scheduler.py  web_runner.py
tests/: conftest.py  test_api_experiment.py  test_api_user.py  test_api_user_admin.py  test_api_user_registration.py  test_authorization.py  test_cli.py  test_experiment_models.py
web_django/: manage.py
(+116 files in other folders)
