# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "Shepherd-WebAPI"
version = "2025.08.2"
description = "Interface between the Testbed Instance and the User"
readme = "README.md"
dependencies = [
    "shepherd-server[dev,test]",
    "shepherd-client[test]",
    # dev
    "pre-commit",
    "pre-commit-uv", # check with `pre-commit --version`
    "bump2version",
    "pyright",
    "ty",
]
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.sources]
shepherd-server = { path = "./shepherd_server", editable = true}
shepherd-client = { path = "./shepherd_client", editable = true}

[tool.setuptools]
packages = ["shepherd_server", "shepherd_client"]

[tool.ty.terminal]
output-format = "concise"
