# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "Shepherd-WebAPI"
version = "2026.02.1"
description = "Interface between the Testbed Instance and the User"
readme = "README.md"
dependencies = [
    "shepherd-server[dev,test]",
    "shepherd-client[test]",
    # dev
    "prek",  # pre-commit plugin-replacement
    "bump2version",
    "pyright",
    "ty",
]
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.sources]
shepherd-server = { path = "./shepherd_server", editable = true}
shepherd-client = { path = "./shepherd_client", editable = true}

[tool.setuptools]
packages = ["shepherd_server", "shepherd_client"]

[tool.ty.terminal]
output-format = "concise"
