# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "Shepherd-WebAPI"
version = "2026.04.1"
description = "Interface between the Testbed Instance and the User"
readme = "README.md"
dependencies = [
    "shepherd-server[dev,test]",
    "shepherd-client[admin,dev,test]",
    # dev
    "prek",  # pre-commit replacement
    "bump2version",
    "ty",
]
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.sources]
shepherd-server = { path = "./shepherd_server", editable = true}
shepherd-client = { path = "./shepherd_client", editable = true}

[tool.setuptools]
packages = ["shepherd_server", "shepherd_client"]

[tool.ty.terminal]
output-format = "concise"

[tool.codespell]
builtin = "clear,rare,informal,usage,code,en-GB_to_en-US"
skip = "*.svg,*.css,*.js,flocklab_template.xml"
ignore-words-list = "jupyter,fram,ws,astroid,ro"
check-filenames = true
check-hidden = true
