[metadata]
name = shepherd_webservice
version = attr: shepherd_webservice.__version__
author = Ingmar Splitt
author_email = ingmar.splitt@tu-dresden.de
maintainer_email = ingmar.splitt@tu-dresden.de
license = MIT
url = https://github.com/orgua/shepherd_webservice
project_urls =
    Tracker = https://github.com/orgua/shepherd_webservice/issues
    Source = https://github.com/orgua/shepherd_webservice
description = Web-Interface for the Shepherd-Testbed
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testbed, beaglebone, pru, batteryless, energyharvesting, solar
platforms = unix, linux, osx, cygwin, win32, win64
classifiers =

    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = find:
package_dir =
    =src
zip_safe = True
include_package_data = True
python_requires = >= 3.8
install_requires =
    django
    pandas
    h5py
    pyaml
    flask
    fastapi
    pydantic

[options.extras_require]
dev =
    black
    pylint
    flake8
    pre-commit
    pyright
    pandas-stubs

test =
    pytest
    pytest-click
    coverage

[options.packages.find]
where=src

[options.package_data]
* = README.md


[codespell]
skip = *.svg,*.css,*.js,flocklab_template.xml

builtin = clear,rare,informal,usage,code,en-GB_to_en-US

ignore-words-list = jupyter

# options without argument
check-filenames =
check-hidden =

[isort]
profile=black
filter_files=true
force_single_line=true

[flake8]
max-line-length = 100
require-plugins =
    # https://github.com/DmytroLitvinov/awesome-flake8-extensions

    ### Bugs & Code-Smells
    flake8-bugbear
    flake8-secure-coding-standard
    flake8-bandit
    flake8-builtins

    ### Clean Code
    flake8-comprehensions
    flake8-simplify
    flake8-eradicate
    flake8-commas

    ### Limitations
    flake8-blind-except
    flake8-logging-format
    flake8-print

    ### Documentation
    flake8-comments
    # flake8-docstrings
    # flake8-rst-docstrings

    ### Test-Improvements
    flake8-assertive

extend-ignore =
    # black-formatter-specific
    E203
    # open() vs os.open()
    SCS109
    # hideous commas
    C812
    C815
    C813
    # DOCString TODO: reduce here
    D100
    D102
    D103
    # TEMPORARY, TODO: reduce
    E800

#per-file-ignores =

exclude =
    db_benchmarks/*
    scratch_models/*

count = True
statistics = True
