[metadata]
name = shepherd_wsrv
version = attr: shepherd_wsrv.__version__
author = Ingmar Splitt
author_email = ingmar.splitt@tu-dresden.de
maintainer_email = ingmar.splitt@tu-dresden.de
license = MIT
url = https://github.com/orgua/shepherd_webservice
project_urls =
    Tracker = https://github.com/orgua/shepherd_webservice/issues
    Source = https://github.com/orgua/shepherd_webservice
description = Web-Server & -API for the Shepherd-Testbed
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testbed, beaglebone, pru, batteryless, energyharvesting, solar
platforms = unix, linux, osx, cygwin, win32, win64
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = find:
package_dir =
    =.
zip_safe = True
include_package_data = True
python_requires = >= 3.10
install_requires =
    pandas
    pyaml
    fastapi
    typer[all]
    uvicorn[standard]
    python-multipart
    pydantic[email]
    shepherd_core==2023.12.1
#   shepherd_herd TODO

[options.extras_require]
dev =
    pre-commit
    pyright
    pandas-stubs
    # as long as pandas has to type hints

test =
    pytest
    pytest-click
    coverage

[options.entry_points]
console_scripts =
	shepherd-wsrv = shepherd_wsrv.cli:cli

[options.packages.find]
where=.

[options.package_data]
* = README.md

[aliases]
test = pytest

[tool:pytest]
addopts = -vvv
