[project]
name = "shepherd_server"
description = "Web-Server & -API for the Shepherd-Testbed"
keywords = ["testbed", "beaglebone", "pru", "batteryless", "energyharvesting", "solar"]

authors = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},]
maintainers = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},]

readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "../LICENSE"}
version = "2025.07.1"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English"
]

requires-python = ">=3.10"
dependencies = [
    "pyaml",
    "fastapi[standard]",
    "fastapi-mail",
    "typer",
    "uvicorn[standard]",
    "pydantic[email]>=2.11.0",
    "beanie>=1.29.0",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "shepherd_core>=2025.6.4",
    "python-decouple",
    "shepherd_herd>=0.9.3",
    # TODO: python-multipart
]

[project.optional-dependencies]
dev = [
    "bcrypt", # for salt-creation
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-click",
    "pytest-dependency",
    "pytest-timeout",
    "coverage",
]

all = ["shepherd-server[dev,test]"]

[project.urls]
Documentation = "https://github.com/nes-lab/shepherd-webapi/blob/main/README.md"
Issues = "https://github.com/nes-lab/shepherd-webapi/issues"
Source = "https://github.com/nes-lab/shepherd-webapi"

[project.scripts]
shepherd-server = "shepherd_server.cli:cli"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "./"
source-include = ["shepherd_server/favicon/**"]
# platforms = ["unix", "linux"]

[tool.pyright]
root = "./"
include = []
pythonVersion = "3.10"
pythonPlatform = "All"
reportMissingParameterType = true

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = ["-vvv"]
asyncio_mode = "auto"
testpaths = ["tests", ]
norecursedirs = ['*.egg', '*.egg-info', '.*', '_darcs', 'build', 'dist', 'venv', '.venv']
markers = [
    "timeout: limit for individual test to finish",
]

[tool.coverage.run]
source = ["shepherd_server"]
# TODO: add something like "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.uv.sources]
shepherd-core = { git = "https://github.com/nes-lab/shepherd-tools/", branch = "dev", subdirectory = "shepherd_core"}
shepherd-herd = { git = "https://github.com/nes-lab/shepherd/", branch = "dev", subdirectory = "software/shepherd-herd"}
# temporary dev-versions of sub-packets

[tool.ty.src]
exclude = [
    "tests/**"
]
