[project]
name = "shepherd-server"
description = "Web-Server & -API for the Shepherd-Testbed"
keywords = ["testbed", "beaglebone", "pru", "batteryless", "energyharvesting", "solar"]

authors = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},]
maintainers = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},]

version = "2026.02.1"

readme = {file = "README.md", content-type = "text/markdown"}

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English"
]

requires-python = ">=3.13"
dependencies = [
    "pyaml",
    "fastapi[standard]",
    "fastapi-mail",
    "typer",
    "uvicorn[standard]",
    "pydantic[email]>=2.11.0",
    "beanie>=2.0",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "shepherd-core==2025.8.1",
    "python-decouple",
    "shepherd-herd" #>=2025.8.1", TODO
    # TODO: python-multipart
]

[project.optional-dependencies]
dev = [
    "bcrypt", # for salt-creation
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-click",
    "pytest-dependency",
    "pytest-timeout",
    "coverage",
]

all = ["shepherd-server[dev,test]"]

[project.urls]
Documentation = "https://github.com/nes-lab/shepherd-webapi/blob/main/README.md"
Issues = "https://github.com/nes-lab/shepherd-webapi/issues"
Source = "https://github.com/nes-lab/shepherd-webapi"

[project.scripts]
shepherd-server = "shepherd_server.cli:cli"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
# ⤷ switched to uv because package is not public

[tool.uv.build-backend]
module-root = "./"
source-include = ["shepherd_server/favicon/**"]
# platforms = ["unix", "linux"]

[tool.pyright]
root = "./"
include = []
pythonVersion = "3.13"
pythonPlatform = "All"
reportMissingParameterType = true

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = ["-vvv"]  # "--stepwise"
asyncio_mode = "auto"
testpaths = ["tests", ]
norecursedirs = ['*.egg', '*.egg-info', '.*', '_darcs', 'build', 'dist', 'venv', '.venv']
markers = [
    "timeout: limit for individual test to finish",
]

[tool.coverage.run]
source = ["shepherd_server"]
# TODO: add something like "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.uv.sources]
#shepherd-core = { git = "https://github.com/nes-lab/shepherd-tools/", branch = "dev", subdirectory = "shepherd_core"}
#shepherd-herd = { git = "https://github.com/nes-lab/shepherd/", branch = "dev", subdirectory = "software/shepherd-herd"}
# temporary dev-versions of sub-packets

[tool.ty.src]
exclude = [
    "tests/**"
]
