[project]
name = "shepherd-server"
description = "Web-Server & -API for the Shepherd-Testbed"
keywords = ["testbed", "beaglebone", "pru", "batteryless", "energyharvesting", "solar"]

authors = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},]
maintainers = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},]

version = "2026.04.2"

readme = {file = "README.md", content-type = "text/markdown"}

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English"
]

requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "fastapi-mail",
    "typer",
    "uvicorn[standard]",
    "pydantic[email]>=2.11.0",
    "beanie>=2.0",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "shepherd-core==2026.4.2",
    "python-decouple",
    "shepherd-herd>=2026.2.1",
    "typing-extensions",
    # TODO: python-multipart
]

[project.optional-dependencies]
dev = [
    "bcrypt", # for salt-creation
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-click",
    "pytest-dependency",
    "pytest-timeout",
    "coverage",
]

all = ["shepherd-server[dev,test]"]

[project.urls]
Documentation = "https://github.com/nes-lab/shepherd-webapi/blob/main/README.md"
Issues = "https://github.com/nes-lab/shepherd-webapi/issues"
Source = "https://github.com/nes-lab/shepherd-webapi"

[project.scripts]
shepherd-server = "shepherd_server.cli:cli"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "./"
source-include = ["shepherd_server/favicon/**"]
platforms = ["unix", "linux"]

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = ["-vvv"]  # "--stepwise"
asyncio_mode = "auto"
testpaths = ["tests", ]
norecursedirs = ['*.egg', '*.egg-info', '.*', '_darcs', 'build', 'dist', 'venv', '.venv']
markers = [
    "timeout: limit for individual test to finish",
]

[tool.coverage.run]
source = ["shepherd_server"]
# TODO: add something like "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.ty.src]
exclude = [
    "tests/**"
]
